fix: remove extra space in project card

--- a/src/components/project-card/project-card.module.scss
+++ b/src/components/project-card/project-card.module.scss
@@ -8,8 +8,9 @@
     height: 100%;
   }
 
-  > div {
-    max-width: 50%;
+  > div:nth-child(1) {
+    min-width: 45%;
+    max-width: 65%;
     > img {
       object-fit: cover;
       height: 100%;
@@ -45,7 +46,7 @@
   :global(.card).horizontal {
     flex-direction: column;
     max-width: 100%;
-    > div {
+    > div:nth-child(1) {
       max-width: 100%;
       > img {
         width: 100%;
